--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,15 @@
   color: white;
 }
 
+.Api-card {
+  color: #000;
+  font-size: 14px;
+  width: 250px;
+  height: 250px;
+  background-color: rgb(233, 245, 230) !important;
+  margin-top: 30px;
+}
+
 .App-link {
   color: #61dafb;
 }
